@@ -30,7 +30,7 @@
 #include "decoder.h"
 
 #if defined(DEBUG_DECODER) || defined(DEBUG_EAN) || defined(DEBUG_CODE128) || \
-    defined(DEBUG_CODE39) || defined(DEBUG_I25) || \
+    defined(DEBUG_CODE39) || defined(DEBUG_I25) || defined(DEBUG_QR) || \
     (defined(DEBUG_PDF417) && (DEBUG_PDF417 >= 4))
 # define DEBUG_LEVEL 1
 #endif
@@ -68,6 +68,9 @@ zbar_decoder_t *zbar_decoder_create ()
 #ifdef ENABLE_PDF417
     dcode->pdf417.config = 1 << ZBAR_CFG_ENABLE;
 #endif
+#ifdef ENABLE_QR
+    dcode->qrf.config = 1 << ZBAR_CFG_ENABLE;
+#endif
 
     zbar_decoder_reset(dcode);
     return(dcode);
@@ -98,6 +101,9 @@ void zbar_decoder_reset (zbar_decoder_t *dcode)
 #ifdef ENABLE_PDF417
     pdf417_reset(&dcode->pdf417);
 #endif
+#ifdef ENABLE_QR
+    qr_finder_reset(&dcode->qrf);
+#endif
 }
 
 void zbar_decoder_new_scan (zbar_decoder_t *dcode)
@@ -120,6 +126,9 @@ void zbar_decoder_new_scan (zbar_decoder_t *dcode)
 #endif
 #ifdef ENABLE_PDF417
     pdf417_reset(&dcode->pdf417);
+#endif
+#ifdef ENABLE_QR
+    qr_finder_reset(&dcode->qrf);
 #endif
 }
 
@@ -193,6 +202,11 @@ zbar_symbol_type_t zbar_decode_width (zbar_decoder_t *dcode,
        (sym = _zbar_decode_pdf417(dcode)) > ZBAR_PARTIAL)
         dcode->type = sym;
 #endif
+#ifdef ENABLE_QR
+    if(TEST_CFG(dcode->qrf.config, ZBAR_CFG_ENABLE) &&
+       (sym = _zbar_find_qr(dcode)) > ZBAR_PARTIAL)
+        dcode->type = sym;
+#endif
 
     dcode->idx++;
     if(dcode->type) {
@@ -258,6 +272,12 @@ static inline int decoder_set_config_bool (zbar_decoder_t *dcode,
 #ifdef ENABLE_PDF417
     case ZBAR_PDF417:
         config = &dcode->pdf417.config;
+        break;
+#endif
+
+#ifdef ENABLE_QR
+    case ZBAR_QR:
+        config = &dcode->qrf.config;
         break;
 #endif
 
@@ -339,6 +359,7 @@ int zbar_decoder_set_config (zbar_decoder_t *dcode,
         zbar_decoder_set_config(dcode, ZBAR_CODE39, cfg, val);
         zbar_decoder_set_config(dcode, ZBAR_CODE128, cfg, val);
         zbar_decoder_set_config(dcode, ZBAR_PDF417, cfg, val);
+        zbar_decoder_set_config(dcode, ZBAR_QR, cfg, val);
         return(0);
     }
 
